--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ overflow-x: hidden
     }
 
     .jumbotron3 {
-        width: 100%;
+     background-image: none;
 
     }
 
@@ -394,7 +394,7 @@ overflow-x: hidden
     }
 
     .Schedule_Depo_Main {
-        display:
+      
 
     }
 
@@ -406,14 +406,16 @@ overflow-x: hidden
         font-size: 12px;
         font-weight: 600
     }
- .intro img {
-        width: 300px
+ .intro2 img {
+    width: 300px;
+     padding: 10px;
     }
+    
     }
 
 
 @media only screen and (max-width:320px) { 
-    .intro img {
-        width: 100px
+    .intro2 img {
+        width: 300px
     }
 }
